2004-11-12  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c (hppa_skip_permanent_breakpoint): Move definition ...
	* hppa-hpux-tdep.c (hppa_skip_permanent_breakpoint): ... to here.
	* config/pa/tm-hppa.h (SKIP_PERMANENT_BREAKPOINT): Move definition ...
	* config/pa/tm-hppah.h (SKIP_PERMANENT_BREAKPOINT): ... to here.

2004-11-12  Mark Kettenis  <kettenis@jive.nl>

	* tui/tui-io.c: Don't include "terminal.h".
	* Makefile.in (tui-io.o): Update dependencies.

2004-11-12  Kei Sakamoto  <sakamoto.kei@renesas.com>

	* Makefile.in (m32r-linux-tdep.o): Update dependencies.
	* m32r-linux-tdep.c (m32r_linux_init_abi): Call
	set_gdbarch_regset_from_core_section for core file support.
	(m32r_linux_supply_gregset, m32r_linux_regset_from_core_section):
	New functions.

2004-11-11  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c (skip_prologue_hard_way): Make static, add
	stop_after_branch parameter and use it to determine if we should look
	at the delay slot of the first branch insn to find prologue insns.
	(hppa_skip_prologue): Update comment and call to skip_prologue_hard_way.
	(hppa_frame_cache): Likewise.

2004-11-11  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c (hppa_frame_cache): Properly handle the frame pointer
	register so that it can be unwound from anywhere in the prologue.

2004-11-10  msnyder  <msnyder@redhat.com>

	* rs6000-tdep.c (skip_prologue): After saving lr_offset, 
	must invalidate lr_reg (so we don't try to save it again).  
	Ditto for cr_offset and cr_reg.

2004-11-05  Jon Beniston <jon@beniston.com>

	Committed by Andrew Cagney.
	* remote.c (putpkt_binary) Fix PR gdb/1806. Send an ACK 
	when an unexpected packet is received, as the target stubs 
	continually retransmit the same packet until ACKed.
	
2004-11-10  Randolph Chung  <tausq@debian.org>

	* frame.c (get_prev_frame): Use get_frame_type to retrieve the 
	frame's type.

2004-11-10  Randolph Chung  <tausq@debian.org>

	* blockframe.c (inside_entry_func): Move to .....